--- a/extension_libraries/alire.toml
+++ b/extension_libraries/alire.toml
@@ -1,15 +1,21 @@
-name = "getting_an_image_on_the_screen"
-description = "Tutorial on displaying an image using SDL"
+name = "extension_libraries"
+description = ""
 version = "0.1.0-dev"
 
-authors = ["Jose Alexis"]
-maintainers = ["Jose Alexis <jose.alexis.paez.thurgood@gmail.com>"]
+authors = ["Jose Alexis Paez"]
+maintainers = ["Jose Alexis Paez <jose.alexis.paez.thurgood@gmail.com>"]
 maintainers-logins = ["alexispaez"]
 licenses = "MIT OR Apache-2.0 WITH LLVM-exception"
 website = ""
-tags = ["sdl", "sdlada", "imageonscreen"]
+tags = []
 
-executables = ["getting_an_image_on_the_screen"]
+executables = ["extension_libraries"]
+
+[[depends-on]]
+sdlada = "^2.5.124"
+
+[[pins]]
+sdlada = { path='../sdlada' }
 
 [[depends-on]]
 sdlada_mixer = "^2.5.22"
@@ -28,6 +34,3 @@ sdlada_ttf = "~0.1.0-dev"
 
 [[pins]]
 sdlada_ttf = { url='https://github.com/ada-game-framework/sdlada_ttf.git' }
-
-[[pins]]
-sdlada = { url='https://github.com/alexispaez/sdlada.git' }
