--- a/first_graphic_window/alire.toml
+++ b/first_graphic_window/alire.toml
@@ -12,12 +12,6 @@ tags = ["sdl", "sdlada"]
 executables = ["first_graphic_window"]
 
 [[depends-on]]
-sdlada = "^2.5.124"
-
-[[pins]]
-sdlada = { url='https://github.com/ada-game-framework/sdlada.git' }
-
-[[depends-on]]
 sdlada_mixer = "^2.5.22"
 
 [[pins]]
@@ -34,3 +28,6 @@ sdlada_ttf = "~0.1.0-dev"
 
 [[pins]]
 sdlada_ttf = { url='https://github.com/ada-game-framework/sdlada_ttf.git' }
+
+[[pins]]
+sdlada = { url='https://github.com/alexispaez/sdlada.git' }
