--- a/sound_effects_and_music/alire.toml
+++ b/sound_effects_and_music/alire.toml
@@ -23,3 +23,8 @@ sdlada_mixer = "^2.5.22"
 [[pins]]
 sdlada_mixer = { url='https://github.com/ada-game-framework/sdlada_mixer.git' }
 
+[[depends-on]]
+sdlada_image = "~0.1.0-dev"
+
+[[pins]]
+sdlada_image = { url='https://github.com/ada-game-framework/sdlada_image.git' }
