--- a/true_type_fonts/alire.toml
+++ b/true_type_fonts/alire.toml
@@ -12,25 +12,10 @@ tags = []
 executables = ["true_type_fonts"]
 
 [[depends-on]]
-sdlada = "^2.5.124"
-
-[[pins]]
-sdlada = { path='../sdlada' }
-
-[[depends-on]]
-sdlada_mixer = "^2.5.22"
-
-[[pins]]
-sdlada_mixer = { url='https://github.com/ada-game-framework/sdlada_mixer.git' }
-
-[[depends-on]]
-sdlada_image = "~0.1.0-dev"
-
-[[pins]]
-sdlada_image = { url='https://github.com/ada-game-framework/sdlada_image.git' }
-
-[[depends-on]]
 sdlada_ttf = "~0.1.0-dev"
 
 [[pins]]
 sdlada_ttf = { url='https://github.com/ada-game-framework/sdlada_ttf.git' }
+
+[[pins]]
+sdlada = { url='https://github.com/ada-game-framework/sdlada.git' }
