--- a/13_alpha_blending/alire.toml
+++ b/13_alpha_blending/alire.toml
@@ -15,7 +15,7 @@ executables = ["alpha_blending"]
 sdlada = "^2.5.124"
 
 [[pins]]
-sdlada = { path='../sdlada' }
+sdlada = { url='https://github.com/ada-game-framework/sdlada.git' }
 
 [[depends-on]]
 sdlada_mixer = "^2.5.22"
