--- a/14_animated_sprites_and_vsync/alire.toml
+++ b/14_animated_sprites_and_vsync/alire.toml
@@ -15,7 +15,7 @@ executables = ["animated_sprites_and_vsync"]
 sdlada = "^2.5.124"
 
 [[pins]]
-sdlada = { path='../../sdlada' }
+sdlada = { url='https://github.com/ada-game-framework/sdlada.git' }
 
 [[depends-on]]
 sdlada_mixer = "^2.5.22"
