--- a/21_sound_effects_and_music/alire.toml
+++ b/21_sound_effects_and_music/alire.toml
@@ -15,7 +15,7 @@ executables = ["sound_effects_and_music"]
 sdlada = "^2.5.124"
 
 [[pins]]
-sdlada = { path='../sdlada' }
+sdlada = { url='https://github.com/ada-game-framework/sdlada.git' }
 
 [[depends-on]]
 sdlada_mixer = "^2.5.22"
